# animsource

./: AnimSource.pro  CMakeLists.txt  LICENSE  animfactory.cpp  animfactory.h  animsender.cpp  animsender.h  animsource.pro  chessanim.cpp  chessanim.h  main.cpp  mainwindow.cpp  solidanim.cpp  solidanim.h  verticalanim.cpp  verticalanim.h
src/: abstractanimation.cpp  abstractanimation.h  animfactory.cpp  animfactory.h  animsender.cpp  animsender.h  animsender.ui  chessanim.cpp  chessanim.h  columnanim.cpp  columnanim.h  main.cpp  rowanim.cpp  rowanim.h  solidanim.cpp  solidanim.h  verticalanim.cpp  verticalanim.h  windowanim.cpp  windowanim.h
